--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ min-height: 300px !important;background-attachment: fixed;margin-bottom: 150px;"
 
 <div>
 <h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;">Our Mission</h2>
-<h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;font-family:Srisakdi,cursive; display: inline-block;">To help rediscover the wonder of learning and kindling a passion for genuine understanding of the subject.</h2> </div></h2></div>
+<h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;font-family:Srisakdi,cursive; "><blockquote>To help rediscover the wonder of learning and kindling a passion for genuine understanding of the subject.</h2></blockquote> </div></h2></div>
 <div style="margin-top: 50px;margin-bottom: 50px;" class="wow slideInUp" data-wow-duration="1.5s">
     <h2 ><del><span style="color: black; font-size: 22px;"> Our Popular Courses</span><br></del> The Best Courses</h2>
 
