--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@ Phone: 8505902225,8920519014,9891307703</p>
 
 
 <footer style="margin-bottom: 0px;padding-top: 40px; margin-top: 0px !important;">
-     <i class="fa fa-code" aria-hidden="true"></i>
 
-  <p style="color: white;background-color: black;margin-bottom: 0px;text-align: center;display:inline;">Designed and Developed by Ishan Arora|A proud Alumini</p>
+
+  <p style="color: white;background-color: black;margin-bottom: 0px;text-align: center;">Designed and Developed by Ishan Arora|A proud Alumini</p>
 
 </footer>
 
