--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
      <title>HOME | LEARNIFY HUB</title>
-         <link rel="icon" type="image/ico" href="learnlogo.png" />
+         <link rel="icon" type="image/ico" href="icon.ico" />
 
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -173,7 +173,7 @@ min-height: 700px !important;background-attachment: fixed;background-repeat: no-
 <div class="col-sm-8 col-sm-offset-2">
 											<div class="section-description" style="color: white;"><strong >Learning is a lifetime activity as human beings are inherently curious. Purpose of education is to enhance that curiosity and convert into a passion. It is immature to separate learning from fun, rightly done learning is the most engaging of all facts. Be curious, don't be afraid of making mistakes, and above all be passionate for learning.</strong></div>
 															<center>	  <button type="button" class="btn btn-primary btn-lg c1" style="padding: 15px;font-size: 25px;background-color: deeppink;margin: 10px;"><a href="#course1">Our Courses</a></button>
-																  <button type="button" class="btn btn-primary btn-lg c1" style="padding: 15px;font-size: 25px;background-color: deeppink;margin: 10px;">Our Directors</button>
+																  <button type="button" class="btn btn-primary btn-lg c1" style="padding: 15px;font-size: 25px;background-color: deeppink;margin: 10px;"><a href="#Directors">Our Directors</a></button>
 																  </center>
 
 
@@ -241,7 +241,7 @@ min-height: 300px !important;background-attachment: fixed;">
 </div>
 
 
-      <div class=" wow fadeInLeft" data-wow-duration="1.2s" style="margin-bottom: 100px;background-image:url(pink.png);margin-top: 0px !important;background-size: cover;">
+      <div class=" wow fadeInLeft " data-wow-duration="1.2s" id="Directors" style="margin-bottom: 100px;background-image:url(pink.png);margin-top: 0px !important;background-size: cover;">
         <h2 style="visibility: hidden;margin-top: 0px;">dkdkdkdk</h2>
           <h2 style="color: white;margin-bottom: 60px;" ><del><span style="color: black; font-size: 22px;"> Our Directors</span><br></del>People who take education to next level!</h2>
 
