--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
      <title>HOME | LEARNIFY HUB</title>
-         <link rel="icon" type="image/ico" href="icon.ico" />
+         <link rel="icon" type="image/ico" href="icon.ico" >
 
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1">
