--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ p
     </head>
     <body >
      
- <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark " style="background-color: #004e92" >
+ <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark " style="background-color:deeppink;" >
   <a class="navbar-brand" href="#" style="color: white;">LEARNIFY HUB</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
