Adding more responsiveness

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
       .para1 {
         font-size: 13px;
-        width: 100px;
+        width: 7vw;
       }
 
     .stu2{
@@ -154,8 +154,13 @@
      margin-top: 100px;
      margin-bottom: 20px;
    }
-
-
+  .mission{
+    margin-top:0px;
+  }
+  .mission2{
+    margin-bottom:0px;
+  }
+  
     }
 
    
@@ -236,7 +241,7 @@
       <h2 style="display: inline-block;width: 50%;text-align:left;margin-left: 30px;"><del><span
             style="color: black; font-size: 22px;"> About Us</span><br></del> Why Us</h2>
 
-      <p style="display: inline-block;width: 600px;" class="para1">Learnify is an institute for engineering entrance
+      <p style="display: inline-block;width: 40vw;" class="para1">Learnify is an institute for engineering entrance
         examination where we focus to develop the analytical thinking of students through innovative and motivating
         methods. Here we focus on developing the thinking of the students over various concept of Physics, Chemistry and
         Mathematics through physical class room teaching, assignments and tests.</p>
@@ -247,8 +252,8 @@
 min-height: 300px !important;background-attachment: fixed;">
 
     <div>
-      <h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;">Our Mission</h2>
-      <h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;font-family: 'Helvetica Neue',cursive; ">
+      <h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;" class="mission2">Our Mission</h2>
+      <h2 style="margin-top: 10px;margin-bottom:0px;padding: 40px;color: white;font-family: 'Helvetica Neue',cursive; " class="mission">
         <q>To help rediscover the wonder of learning and kindling a passion for genuine understanding of the
           subject.</q></h2>
     </div>
