--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ min-height: 300px !important;background-attachment: fixed;">
       </div>
     </div>
   </div>
-  </div>-->
+  </div>
   <!--4 images--> 
   <div class="row " style="margin-bottom: 0px ;">
     <img src="new1.jpg" style="height: 24.9vw;" class="res">
